added emf avaiable test