@@ -14,19 +14,20 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.eclipse.xtext.test.tests</module>
+		<module>org.eclipse.xtext.xbase.tests</module>
+		<module>org.eclipse.xtext.xbase.ui.tests</module>
+		<module>org.eclipse.xtext.tests</module>
+		<module>org.eclipse.xtext.junit4.tests</module>
+		<module>org.eclipse.xtext.ui.tests</module>
+		<module>org.eclipse.xtext.xtext.ui.tests</module>
+		<module>org.eclipse.xtext.xtend2.tests</module>
+		<module>org.eclipse.xtext.xtend2.ui.tests</module>
 		<module>org.eclipse.xtext.builder.tests</module>
 		<module>org.eclipse.xtext.common.types.tests</module>
 		<module>org.eclipse.xtext.purexbase.tests</module>
 		<module>org.eclipse.xtext.testlanguages</module>
 		<module>org.eclipse.xtext.testlanguages.ui</module>
-		<module>org.eclipse.xtext.tests</module>
-		<module>org.eclipse.xtext.ui.tests</module>
-		<module>org.eclipse.xtext.xbase.tests</module>
-		<module>org.eclipse.xtext.xbase.ui.tests</module>
-		<module>org.eclipse.xtext.xtend2.tests</module>
-		<module>org.eclipse.xtext.xtend2.ui.tests</module>
 		<module>org.eclipse.xtext.xtext.ui.graph.tests</module>
-		<module>org.eclipse.xtext.xtext.ui.tests</module>
 	</modules>
 	<build>
 		<plugins>
@@ -43,9 +44,10 @@
 				<configuration>
 					<useUIHarness>true</useUIHarness>
 					<useUIThread>false</useUIThread>
+					<argLine>${test.argLine}</argLine>
 					<application>org.eclipse.ui.ide.workbench</application>
-					<!-- <dependencies> <dependency> <type>p2-installable-unit</type> <artifactId>org.eclipse.pde.feature.group</artifactId> 
-						<version>${platform-version}</version> </dependency> </dependencies> -->
+					<!-- <dependencies> <dependency> <type>p2-installable-unit</type> <artifactId>org.eclipse.xtext.ui.feature.group</artifactId> 
+						<version>[2.0.1,2.0.2)</version> </dependency> </dependencies> -->
 				</configuration>
 			</plugin>
 		</plugins>
@@ -59,20 +61,21 @@
 					<value>http://www.apple.com/</value>
 				</property>
 			</activation>
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.eclipse.tycho</groupId>
-							<artifactId>tycho-surefire-plugin</artifactId>
-							<version>${tycho-version}</version>
-							<configuration>
-								<argLine>-XstartOnFirstThread</argLine>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-			</build>
+			<properties>
+				<test.argLine>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</test.argLine>
+			</properties>
+		</profile>
+		<profile>
+			<id>other-os</id>
+			<activation>
+				<os>
+					<name>not-mac</name>
+					<family>!mac</family>
+				</os>
+			</activation>
+			<properties>
+				<test.argLine>-Xmx512m -XX:MaxPermSize=256m</test.argLine>
+			</properties>
 		</profile>
 	</profiles>
 </project>
